--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 </div>
                 
                 <ul class="list d-lg-flex">
-                    <li class="first">
+                    <li class="first-li">
                         <a href="#">首頁</a>
                     </li>
                     <li>
@@ -47,7 +47,7 @@
                         <a href="#">王功懶人包</a>
                     </li>
                     <li>
-                        <div class="li-last d-lg-flex">
+                        <div class="li-last d-lg-flex t">
                             <a class="fb" href="#">
                                 <img src="./images/fb.png" alt="">
                             </a>
@@ -60,7 +60,16 @@
                 </ul>
             </header>
             <div class="img">
-                <img src="./images/A_01首頁_07.png">
+                <img src="./images/右五線.png" alt="" style="width: 450px; right: 0; bottom: 45px;" class="bg-img">
+                <img src="./images/左五線.png" alt="" style="width: 490px; left: 0;  bottom: 70px;" class="bg-img">
+                <img src="./images/橋.png" alt="" style="top: 30px; left: 0; right: 0; opacity: 1;" class="bg-img">
+                <img src="./images/左樂器.png" alt="" style="width: 400px; left: 210px; top: -60px; opacity: .8;" class="bg-img md-cantsee">
+                <img src="./images/右樂器.png" alt="" style="width: 400px; right: 210px; top: -60px; opacity: .8;" class="bg-img md-cantsee">
+                <img src="./images/note/left-top.png" alt="" style="width: 320px; left: 30px;  top: 45px; opacity: .8;" class="bg-img">
+                <img src="./images/note/right-top.png" alt="" style="height: 310px; right: 0;  top: -30px; opacity: .8;" class="bg-img">
+                <img src="./images/note/left-bottom.png" alt="" style="width: 400px; left: 20px;  bottom: 85px; opacity: .5;" class="bg-img">
+                <img src="./images/note/right-bottom.png" alt="" style="width: 400px; right: 10px;  bottom: 60px; opacity: .8;" class="bg-img">
+                <img src="./images/A_01首頁_07.png" class="main-img">
             </div>
             <div class="content-text">
                 <div class="content-logo">
