--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 <body>
     <div class="wrap">
         <div class="content d-flex flex-column ">
+            
             <header class="header d-flex align-items-center">
                 <div class="logo">
                     <img src="./images/A_01首頁_03.png" alt="">
@@ -86,6 +87,17 @@
                     <br> 芳苑鄉民代表會、芳苑鄉各村辦公室、芳苑鄉各社區發展協會
                 </b>
             </div>
+            <div class="white-border">
+                    <img src="./images/white-border/左上.png" style="top: -20px;" alt="">
+                    <img src="./images/white-border/右上.png" style="top: -20px; right: 20px;" alt="">
+                    <img src="./images/white-border/線.png" style="transform: rotate(180deg); top: -20px; left: 26px;" alt="">
+                    <img src="./images/white-border/線.png" style="max-width: 1000px; top: 65px; left: 100px;" alt="">
+                    <img src="./images/white-border/直線-左.png" style=" top: 60px; " alt="">
+                    <img src="./images/white-border/直線-右.png" style=" top: 60px; right: 20px;" alt="">
+                    <img src="./images/white-border/左下.png" style="bottom: -10px;  " alt="">
+                    <img src="./images/white-border/右下.png" style="bottom: -10px; right: 20px;" alt="">
+                    <img src="./images/white-border/線.png" style="max-width: 1000px; bottom: -10px; left: 100px;" alt="">
+                </div>
         </div>
         <div class="footer">
             <b>彰化縣政府 © 版權所有
