--- a/index.html
+++ b/index.html
@@ -16,18 +16,27 @@
 <body>
     <div class="wrap">
         <div class="content d-flex flex-column ">
-            
+            <div class="white-border2">
+                <img src="./images/white-border/左上.png" style="top: -20px;" alt="">
+                <img src="./images/white-border/右上.png" style="top: -20px; right: 20px;" alt="">
+                <!-- <img src="./images/white-border/線.png" style="transform: rotate(180deg); top: -20px; left: 26px;" alt=""> -->
+                <!-- <img src="./images/white-border/線.png" style="max-width: 1000px; top: 65px; left: 100px;" alt=""> -->
+                <img src="./images/white-border/直線-左.png" style=" top: 60px; " alt="">
+                <img src="./images/white-border/直線-右.png" style=" top: 60px; right: 20px;" alt="">
+                <img src="./images/white-border/左下.png" style="bottom: -10px;  " alt="">
+                <img src="./images/white-border/右下.png" style="bottom: -10px; right: 20px;" alt="">
+                <img src="./images/white-border/線.png" style="max-width: 1000px; bottom: -10px; left: 100px;" alt="">
+            </div>
             <header class="header d-flex align-items-center">
                 <div class="logo">
                     <img src="./images/A_01首頁_03.png" alt="">
                 </div>
-
                 <div class="menu-burgermenu">
                     <a class="burgermenu-icon" href="#">
                         <i class="fa fa-bars" aria-hidden="true"></i>
                     </a>
                 </div>
-                
+
                 <ul class="list d-lg-flex">
                     <li class="first-li">
                         <a href="#">首頁</a>
@@ -56,9 +65,10 @@
                                 <i class="fas fa-download"></i>下載區
                             </a>
                         </div>
-
                     </li>
                 </ul>
+                <img class="white-border1" src="./images/white-border/線.png" style="position: absolute; z-index: 6; transform: rotate(180deg); max-width: 1000px; top: -20px; left: 35px;" alt="">
+                <img class="white-border1" src="./images/white-border/線.png" style="position: absolute; z-index: 6; max-width: 1000px; top: 65px; left: 35px;" alt="">
             </header>
             <div class="img">
                 <img src="./images/右五線.png" alt="" style="width: 450px; right: 0; bottom: 45px;" class="bg-img">
@@ -87,22 +97,11 @@
                     <br> 芳苑鄉民代表會、芳苑鄉各村辦公室、芳苑鄉各社區發展協會
                 </b>
             </div>
-            <div class="white-border">
-                    <img src="./images/white-border/左上.png" style="top: -20px;" alt="">
-                    <img src="./images/white-border/右上.png" style="top: -20px; right: 20px;" alt="">
-                    <img src="./images/white-border/線.png" style="transform: rotate(180deg); top: -20px; left: 26px;" alt="">
-                    <img src="./images/white-border/線.png" style="max-width: 1000px; top: 65px; left: 100px;" alt="">
-                    <img src="./images/white-border/直線-左.png" style=" top: 60px; " alt="">
-                    <img src="./images/white-border/直線-右.png" style=" top: 60px; right: 20px;" alt="">
-                    <img src="./images/white-border/左下.png" style="bottom: -10px;  " alt="">
-                    <img src="./images/white-border/右下.png" style="bottom: -10px; right: 20px;" alt="">
-                    <img src="./images/white-border/線.png" style="max-width: 1000px; bottom: -10px; left: 100px;" alt="">
-                </div>
+
         </div>
         <div class="footer">
             <b>彰化縣政府 © 版權所有
-                <br>
-                Copyright 2018 Changhua Gov. All Rights Reserved</b>
+                <br> Copyright 2018 Changhua Gov. All Rights Reserved</b>
         </div>
     </div>
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
